// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckUnauthenticated component Should redirect to Login page 1`] = `
<body>
  <div />
</body>
`;

exports[`CheckUnauthenticated component Should render children correctly 1`] = `
<body>
  <div>
    <div>
      Children element
    </div>
  </div>
</body>
`;
